DPC-1060: UI Fixes (#633)
* fix overlapping drop down arrows

* top nav visited links easier to read

* fix blue box responsive design

--- a/dpc-web/app/assets/stylesheets/components/_fields.scss
+++ b/dpc-web/app/assets/stylesheets/components/_fields.scss
@@ -1,3 +1,8 @@
+.drop-down {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
 .field--follow-up {
   border-left: 5px solid $color-primary-alt-light;
   margin-left: $spacer-2;
